package Garage; // namespace
message Garage {
	required string instance_id = 1;
	required uint32 device_id = 2;
	required uint32 msgcmd = 3;
	optional bytes content = 4; //消息体
}

message DsMessage {
	required uint32 device_id   = 1;
	required uint32 operation_id = 2;
	optional bool has_param = 3 [default = false];
	optional bool has_return = 4 [default = false];
	repeated DsParam params = 5;
	//repeated DsParam returns = 6;
}

message DsParam {
	optional uint32 id = 1;
	optional string name  = 2;
	optional string datatype = 3;
	optional string value = 4;
}

message JsonItem {
	required string name = 1;
	required string value = 2;
}

message OpMap {
	repeated JsonItem values = 1;
}