package com.npu.garagedoor.phoneclient.proto;
message ProcCmd {
	//optional string cmd_name =1;
	
	//执行命令的设备的id
	required uint32 device_id   = 2;
	
	//操作码，
	required uint32 operation_code = 3;
	
	optional bool has_return = 7  [default = false];
	optional bool has_param = 8  [default = false];
	
	repeated ProcVariable params = 9;
	repeated ProcVariable returns = 10;
	
	optional string activity = 12; 
}

message ProcVariable {
	optional string data_ref = 1;
	optional string data_id = 2;
	optional uint32 data_type = 3;
	optional string data_name = 4;
	optional string data_valueStr = 5;
	optional uint32 data_value = 6;
}
